Viewport & border fix on mobile

--- a/Assignment/styles.css
+++ b/Assignment/styles.css
@@ -1,4 +1,6 @@
 
+@import url('https://fonts.googleapis.com/css?family=DM+Serif+Display|Martel&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +13,7 @@ body {
 }
 
 h1, p, figcaption, a {
-    font-family: 'Montserrat', Arial, sans-serif;
+    font-family: 'Martel', Arial, serif;
     padding: 0.5em 0.25em;
 }
 
@@ -35,11 +37,12 @@ header h1 {
     border-image-slice: 33.33%;
     border-image-source: url(media/border-vine.png);
     border-image-repeat: repeat;
+    border-top: 0;
     border-top: none;
     color: #8E3B46;
     flex-basis: 100%;
-    font-family: 'Baskerville', 'Times New Roman', serif;
-    font-size: 3.5em;
+    font-family: /*'DM Serif Display',*/ 'Baskerville', serif;
+    font-size: 3em;
     padding: 0 0.25em 0.5em 0.25em;
     text-align: center;
 }
@@ -78,19 +81,17 @@ nav a {
     border: 0.1em solid #8E3B46;
     border-radius: 0.5em;
     color: #FFF8F0;
-    padding: 0.5em 5em;
+    font-weight: bold;
+    padding: 0.3em 4em;
     text-decoration: none;
     /*transition-duration: 0.5s;*/
 }
 
-/*
 nav a:hover {
-    background-color: #2F2F2F;
-    border: 0.1em solid #000;
-    box-shadow: inset 0 0 0.5em #000;
-    color: #FFF8F0;
+    background-color: #FFF8F0;
+    border: 0.1em solid #2F2F2F;
+    color: #8E3B46;
 }
-*/
 
 /* Main */
 
@@ -126,7 +127,6 @@ figcaption {
         border-image-repeat: repeat;
         border-top: none;
         margin: 0 auto;
-        max-width: 2048px;
         width: 85%;
     }
 
@@ -165,7 +165,7 @@ figcaption {
     }
 
     nav a {
-        padding: 0.5em 5em;
+        padding: 0.3em 4em;
     }
 
     main h1, main p {
@@ -182,10 +182,8 @@ figcaption {
 
 }
 
-/*
-@media screen and (min-width: 80em) {
+@media screen and (min-width: 100em) {
     body {
-        width: 60em;
+        width: 80em;
     }
 }
-*/
